--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
   <title>collus</title>
 </head>
 <body>
@@ -19,11 +20,11 @@
       </div>
       <nav class="menu" id="menu">
           <ul>
-              <li><a href="#hey">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#skills">Skills</a></li>
-              <li><a href="#works">History</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a class="yakor" href="#hey">Home</a></li>
+              <li><a class="yakor" href="#about">About</a></li>
+              <li><a class="yakor" href="#works">History</a></li>
+              <li><a class="yakor" href="#skills">Skills</a></li>
+              <li><a class="yakor" href="#contact">Contact</a></li>
           </ul>
       </nav>
     </div>
@@ -39,9 +40,8 @@
   
   <section class="works" id="works">
     <h2>My history of works:</h2>
-    
-  </section>
-  
+  </section>  
+
   <section class="skills" id="skills">
     <h2>My skills in development:</h2>
     <ul id="skills-list">
@@ -58,12 +58,11 @@
       <li><a href="https://github.com/collus121" target="_blank"><img src="icons/github.png" alt=""></a></li>
       <li><a href="https://www.youtube.com/@collus1" target="_blank"><img src="icons/youtube.png" alt=""></a></li>
       <li><a href="https://www.twitch.tv/collus121" target="_blank"><img src="icons/twitch.png" alt=""></a></li>
-      <li><a href="www.tiktok.com/@collus121" target="_blank"><img src="icons/tiktok.png" alt=""></a></li>
+      <li><a href="https://www.tiktok.com/@collus121" target="_blank"><img src="icons/tiktok.png" alt=""></a></li>
       <li><a href="https://t.me/MNBVCXZLOS" target="_blank"><img src="icons/telegram.png" alt=""></a></li>
       <li><a href="https://discordapp.com/users/749864042369122304/" target="_blank"><img src="icons/discord.png" alt=""></a></li>
-      <li><a href="https://www.instagram.com/collus121/profilecard/?igsh=MWNkcHlsdWs0aTR3Zg==" target="_blank"> <img src="icons/inst.png" alt=""></a></li>
+      <li><a href="https://www.instagram.com/collus121/profilecard/?igsh=MWNkcHlsdWs0aTR3Zg==" target="_blank"><img src="icons/inst.png" alt=""></a></li>
     </ul>
   </section>
-
 </body>
 </html>
