Added skill bars and fix erros

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
+  <script src="main.js" defer></script>
   <title>collus</title>
 </head>
 <body>
@@ -40,21 +40,39 @@
   
   <section class="works" id="works">
     <h2>My history of works:</h2>
-  </section>  
+  </section>    
 
   <section class="skills" id="skills">
     <h2>My skills in development:</h2>
-    <ul id="skills-list">
-      <li>HTML & CSS</li>
-      <li>JS</li>
-      <li>Python</li>  
-      <li>React</li>
-    </ul>
+    <div class="skill">
+      <span>HTML & CSS</span>
+      <div class="skill-bar">
+        <div class="skill-level html-css"></div>
+      </div>
+    </div>
+    <div class="skill">
+      <span>JavaScript</span>
+      <div class="skill-bar">
+        <div class="skill-level js"></div>
+      </div>
+    </div>
+    <div class="skill">
+      <span>Python</span>
+      <div class="skill-bar">
+        <div class="skill-level python"></div>
+      </div>
+    </div>
+    <div class="skill">
+      <span>Frameworks</span>
+      <div class="skill-bar">
+        <div class="skill-level frameworks"></div>
+      </div>
+    </div>
   </section>
 
   <section class="contact" id="contact">
     <h2>You can find me here:</h2>
-    <ul id="contact-list">
+    <ul id="contact-list">  
       <li><a href="https://github.com/collus121" target="_blank"><img src="icons/github.png" alt=""></a></li>
       <li><a href="https://www.youtube.com/@collus1" target="_blank"><img src="icons/youtube.png" alt=""></a></li>
       <li><a href="https://www.twitch.tv/collus121" target="_blank"><img src="icons/twitch.png" alt=""></a></li>
